--- a/src/components/todo-widget/todo.scss
+++ b/src/components/todo-widget/todo.scss
@@ -15,5 +15,19 @@
     margin: 0.5em 0 0.5em 0;
     background-color: #feffde;
     padding: 0.5em;
+    min-height: 8em;
+    border: 1px solid red;
+    overflow: auto;
+
+    .overlay {
+      position: fixed;
+      background-color: white;
+      width: 100%;
+      height: 100%;
+      opacity: 85%;
+      text-align: center;
+      padding-top: 1em;
+      font-size: 1.4em;
+    }
   }
 }
