--- a/src/components/todo-widget/todo.scss
+++ b/src/components/todo-widget/todo.scss
@@ -12,21 +12,27 @@
   }
 
   .todo-main {
-    margin: 0.5em 0 0.5em 0;
-    background-color: #feffde;
-    padding: 0.5em;
-    min-height: 8em;
-    border: 1px solid red;
-    overflow: auto;
+    position: relative;
+    width: 100%;
+    min-height: 500px;
 
-    .overlay {
-      position: fixed;
-      background-color: white;
+    .overlay,
+    .todo-list {
+      position: absolute;
       width: 100%;
       height: 100%;
+    }
+
+    .todo-list {
+      overflow: auto;
+    }
+
+    .overlay {
+      position: absolute;
+      background-color: white;
       opacity: 85%;
+      z-index: 1000;
       text-align: center;
-      padding-top: 1em;
       font-size: 1.4em;
     }
   }
